--- a/Pawar/style.css
+++ b/Pawar/style.css
@@ -1551,6 +1551,7 @@
       font-size: 16px;
       cursor: pointer;
       transition: all 0.2s ease;
+        margin-top:2px;
     }
 
     .btn-yes {
