--- a/Pawar/style.css
+++ b/Pawar/style.css
@@ -606,12 +606,12 @@
         font-size: 1rem;
     }
 
-    .services-grid {
+/*     .services-grid {
         gap: 1rem;
-    }
+    } */
 
     .service-card {
-        flex: 0 0 calc(80% - 0.5rem);
+        flex: 0 0 calc(90% - 1.5rem);
         padding: 2rem 1.5rem;
         min-height: 250px;
     }
