--- a/Pawar/blog.css
+++ b/Pawar/blog.css
@@ -302,6 +302,7 @@
       gap: 12px;
       flex-wrap: wrap;
       justify-content: center;
+      overflow:hidden;
     }
     .cta-btn {
       padding: 12px 20px;
