--- a/Pawar/blog.css
+++ b/Pawar/blog.css
@@ -9,6 +9,10 @@
   h1,h2,h3,h4,h5,h6{
     color: #4caf50;
   }
+ h5,h6{
+    font-size:1.2rem;
+
+  }
   .container{
     max-width:800px;
     margin:auto;
